# pretty-rusty

./: Cargo.toml  readme.md
src/: lib.rs  logic.rs  main.rs  output.rs  settings.rs  state.rs
src/logic/: mod.rs
