[package]
name = "pretty-rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ra_ap_syntax = "0.0.190"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
toml = "0.8"
